--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "caffe-ssh"]
 	path = caffe-ssh
-	url = https://www.github.com/mahyarnajibi/caffe-ssh
+	url = https://www.github.com/KPLRCDBS/caffe-ssh
